# pramaan

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS.md  TASKS.md  action.yml
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: AUTONOMOUS_BUILD_COMMAND.md  AUTONOMOUS_GSD_BEFORE_PHASE_36_PROMPT.md  AUTONOMOUS_RECURSIVE_GSD_COMMAND.md  CLAUDE_IMPROVEMENT_PLAN.md  PHASE_AGGREGATE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
action/: render-summary.mjs  render-summary.test.mjs  resolve-refs.mjs
corpus/: README.md  adversarial-scenarios-v0.1.json  ai-probe-categories.json  competitor-gap-fixtures.v0.1.json  starter-adversarial-scenarios.json  verifier-abuse-fixtures.v0.1.json
crates/pramaan-bundle/: Cargo.toml
crates/pramaan-bundle/src/: lib.rs
crates/pramaan-cli/: Cargo.toml
crates/pramaan-cli/src/: fuzz.rs  main.rs  mutation.rs  oracle.rs  static_checks.rs
crates/pramaan-cli/tests/: smoke.rs
crates/pramaan-core/: Cargo.toml
crates/pramaan-core/src/: lib.rs  risks.rs
docs/: GITHUB_REPO_SETUP.md  PRAMAAN_INTENT.md  PRODUCT_FAMILY_NOTES.md  RESEARCH_INDEX.md  adapter-certification.md  adversarial-corpus.md  agent-harness.md  ai-probe-generator.md  attestation.md  benchmark-integrity.md  benchmark-report-template.md  bundle-verification.md  calibration.md  claim-audit.md  competitive-benchmark.md  confidence.md  configuration.md  cosign-signing.md  demo.md  enterprise-deployment.md  github-action.md  human-signoff.md  language-readiness-gates.md  languages.md  operator-guide.md  oracle-integrity.md  oracle-parser-decision.md  plugin-author-guide.md  plugins.md  policy-packs.md  policy.md  quickstart.md  receipt-model.md  redaction.md  release.md  replay.md  reviewer-interface.md  reviewer-overrides.md  reviewer-ux.md  risk-taxonomy.md  (+4 more)
policy/: fintech-strict.json  open-source-maintainer.json  private-preview.json  security-sensitive.json  startup-fast.json
schemas/: adapter_certification.schema.json  adversarial_corpus.schema.json  agent_decision.schema.json  bundle.schema.json  claim_scope.schema.json  confidence.schema.json  feedback.schema.json  in_toto_statement.schema.json  plugin_protocol.schema.json  policy_profile.schema.json  probe.schema.json  receipt.schema.json  risk_taxonomy.schema.json  sarif_export.schema.json  vsa.schema.json
scripts/: check-adversarial-corpus.mjs  check-ai-probe-execution.mjs  check-claim-audit.mjs  check-competitor-gap-fixtures.mjs  check-fuzz-harness-evidence.mjs  check-license-safe-public-docs.mjs  check-oracle-parser-metadata.mjs  check-phase16-trust-layer.mjs  (+12 more)
(+359 files in other folders)
