[workspace]
members = [
    "crates/pramaan-bundle",
    "crates/pramaan-cli",
    "crates/pramaan-core",
    "crates/pramaan-sandbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tsinghkothari-droid/pramaan"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
