[package]
name = "pramaan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Receipt-first verification CLI for AI-authored pull requests"
readme = "../../README.md"
homepage = "https://github.com/tsinghkothari-droid/pramaan"
keywords = ["ci", "verification", "slsa", "sigstore", "ai-code"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "pramaan"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
pramaan-bundle = { path = "../pramaan-bundle" }
pramaan-core = { path = "../pramaan-core" }
pramaan-sandbox = { path = "../pramaan-sandbox" }
serde.workspace = true
serde_json.workspace = true
